2015-04-14  Michal Hoftich  <michal.h21@gmail.com>

	* Makefile (tex4ht_4ht_derived): add memoir.4ht.
	* tex4ht-4ht.tex: improve array and tabular support for memoir;
	input array,dcolumn,tabularx,booktabs.4ht, disable \columnlines.
	http://puszcza.gnu.org.ua/bugs/?249

2015-04-01  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-ooffice.tex: configure wrapfig to avoid spurious \par.
	https://puszcza.gnu.org.ua/bugs/?247

2015-02-17  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (spanish.4ht): fix missing csname when Spanish
	babel is used.
	https://puszcza.gnu.org.ua/bugs/?245
	* Makefile (tex4ht_4ht_derived): add spanish.4ht.

2015-02-11  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-ooffice.tex (ooffice.4ht): fix images in subfolders
	handling -- everything in Pictures/.
	* tex4ht-env.tex: likewise, copy all images to one directory.
	https://puszcza.gnu.org.ua/bugs/?240

2015-02-13  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-mathml.tex (mathml.4ht) <config mathml fontmath>: 
	output <mi mathvariant=...
	https://puszcza.gnu.org.ua/bugs/?226

2015-02-09  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-mathml.tex (mathml.4ht) <config start mtext>: \ifmmode\else
	<config math within mtext> to avoid some (but not all)
	problems.  https://puszcza.gnu.org.ua/bugs/?244

2015-02-07  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (scrartcl.4ht, scrbook.4ht, scrreprt.4ht):
	koma-script patch, mail of 6 Feb 2015 12:32:10.
	Original report from Alexander Willand.

2015-02-04  Radhakrishnan CV  <cvr@river-valley.org>

	* tex4ht-4ht.tex (biblatex.4ht): biblatex fixes for
	http://puszcza.gnu.org.ua/bugs/?227.

2015-01-29  Michal Hoftich <michal.h21@gmail.com> and Karl Berry <karl@gnu.org>

	* Makefile (tex4ht_4ht_derived): add quoting.4ht.
	* tex4ht-4ht.tex (quoting.4ht): new generated file,
        to restore <p> when quoting.sty is sued.
	http://puszcza.gnu.org.ua/bugs/?198
	http://tex.stackexchange.com/q/140986/2891
